<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/txt_logo_image"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        tools:ignore="ScrollViewCount">

        <Button
            android:id="@+id/btn_zoom_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_zoom_in" />

        <Button
            android:id="@+id/btn_zoom_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/btn_zoom_in"
            android:text="@string/txt_zoom_out" />

        <Button
            android:id="@+id/btn_scale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/btn_zoom_out"
            android:text="@string/txt_scale" />

        <Button
            android:id="@+id/btn_fade_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_zoom_in"
            android:layout_marginTop="5dp"
            android:text="@string/txt_fade_in" />

        <Button
            android:id="@+id/btn_fade_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_zoom_in"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/btn_fade_in"
            android:text="@string/txt_fade_out" />

        <Button
            android:id="@+id/btn_alpha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_zoom_in"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/btn_fade_out"
            android:text="@string/txt_alpha" />

        <Button
            android:id="@+id/btn_slide_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_fade_in"
            android:layout_marginTop="5dp"
            android:text="@string/txt_slide_left" />

        <Button
            android:id="@+id/btn_slide_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_fade_in"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/btn_slide_left"
            android:text="@string/txt_slide_right" />

        <Button
            android:id="@+id/btn_slide_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_slide_left"
            android:layout_marginTop="5dp"
            android:text="@string/txt_slide_up" />

        <Button
            android:id="@+id/btn_slide_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_slide_left"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/btn_slide_up"
            android:text="@string/txt_slide_down" />

        <Button
            android:id="@+id/btn_zoom_in_fade_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_slide_up"
            android:layout_marginTop="5dp"
            android:text="@string/txt_zoom_in_fade_in" />

        <Button
            android:id="@+id/btn_zoom_out_fade_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_slide_up"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/btn_zoom_in_fade_in"
            android:text="@string/txt_zoom_out_fade_out" />

        <Button
            android:id="@+id/btn_translate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_zoom_in_fade_in"
            android:layout_marginTop="5dp"
            android:text="@string/txt_translate" />

        <Button
            android:id="@+id/btn_move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_zoom_in_fade_in"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/btn_translate"
            android:text="@string/txt_move" />

        <Button
            android:id="@+id/btn_rotate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_translate"
            android:layout_marginTop="5dp"
            android:text="@string/txt_rotate" />

        <Button
            android:id="@+id/btn_scale_rotate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_translate"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/btn_rotate"
            android:text="@string/txt_scale_rotate" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>